--- a/web/config.toml
+++ b/web/config.toml
@@ -25,6 +25,8 @@ googleAnalytics = "UA-51824212-2" # Enable Google Analytics by entering your tra
     categories = true # Enable "Categories" widget
     tags = true # Enable "Tags" widget
     tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
+    social_twitter = "postgres_btn"
+    social_github = "brightonpg"
     
 
 
@@ -34,3 +36,11 @@ googleAnalytics = "UA-51824212-2" # Enable Google Analytics by entering your tra
     weight = 2
     identifier = "blog"
     url = "/post/"
+    
+    
+[[menu.main]]
+    name = "Youtube channel"
+    pre = "<i class='fa fa-heart'></i>"
+    weight = 3
+    identifier = "youtube"
+    url = "https://www.youtube.com/channel/UCgr5Iv9eJYN2Piy9oYkn6jw"
