--- a/web/config.toml
+++ b/web/config.toml
@@ -5,7 +5,7 @@ paginate = "5" # Number of posts per page
 theme = "mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "UA-51824212-2" # Enable Google Analytics by entering your tracking id
-
+cacheDir= "/tmp/hugo_pgbrighton/"
 
 
 [Params]
